Get teleop experiments going in the new config system

--- a/notebooks/22_la_teleop_demos.ipynb
+++ b/notebooks/22_la_teleop_demos.ipynb
@@ -12,45 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Importing module 'gym_38' (/data/scratch/ankile/isaacgym/python/isaacgym/_bindings/linux-x86_64/gym_38.so)\n",
-      "Setting GYM_USD_PLUG_INFO_PATH to /data/scratch/ankile/isaacgym/python/isaacgym/_bindings/linux-x86_64/usd/plugInfo.json\n",
-      "PyTorch version 2.0.1+cu117\n",
-      "Device count 2\n",
-      "/data/scratch/ankile/isaacgym/python/isaacgym/_bindings/src/gymtorch\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using /data/scratch/ankile/.cache as PyTorch extensions root...\n",
-      "Emitting ninja build file /data/scratch/ankile/.cache/gymtorch/build.ninja...\n",
-      "Building extension module gymtorch...\n",
-      "Allowing ninja to set a default number of workers... (overridable by setting the environment variable MAX_JOBS=N)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ninja: no work to do.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading extension module gymtorch...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import furniture_bench\n",
     "\n",
@@ -58,6 +22,7 @@
     "import pickle\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
+    "import zarr\n",
     "\n",
     "from src.visualization.render_mp4 import (\n",
     "    data_to_video,\n",
@@ -1925,6 +1890,98 @@
    ],
    "source": [
     "len(data[\"observations\"]), len(data[\"rewards\"]), len(data[\"actions\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Look at my new `one_leg` teleop demos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = zarr.open(\n",
+    "    \"/data/scratch/ankile/furniture-data/processed/sim/one_leg/teleop/low/success.zarr\",\n",
+    "    mode=\"r\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(50,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([  535,  1166,  1720,  2269,  2802,  3409,  4016,  4560,  5200,\n",
+       "        5776,  6370,  6941,  7474,  8114,  8785,  9395,  9951, 10441,\n",
+       "       10994, 11562, 12293, 12890, 13456, 13996, 14541, 15062, 15600,\n",
+       "       16161, 16689, 17240, 17757, 18371, 19025, 19637, 20153, 20695,\n",
+       "       21287, 21923, 22457, 23070, 23712, 24253, 24766, 25285, 25799,\n",
+       "       26327, 27018, 27717, 28382, 29020], dtype=uint32)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(z[\"episode_ends\"].shape)\n",
+    "\n",
+    "z[\"episode_ends\"][:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6370, 240, 640, 3)\n",
+      "File saved as test.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"test.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ep_idx = 10\n",
+    "end_idx = z[\"episode_ends\"][ep_idx]\n",
+    "\n",
+    "img1 = z[\"color_image1\"][:end_idx]\n",
+    "img2 = z[\"color_image2\"][:end_idx]\n",
+    "img = np.concatenate([img1, img2], axis=2)\n",
+    "\n",
+    "print(img.shape)\n",
+    "\n",
+    "create_mp4_jupyter(img, \"test.mp4\", fps=30)"
    ]
   },
   {
