More batch eval fixes and debug pos control

--- a/notebooks/26_la_analyze_actions.ipynb
+++ b/notebooks/26_la_analyze_actions.ipynb
@@ -4,8 +4,46 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Importing module 'gym_38' (/data/scratch/ankile/isaacgym/python/isaacgym/_bindings/linux-x86_64/gym_38.so)\n",
+      "Setting GYM_USD_PLUG_INFO_PATH to /data/scratch/ankile/isaacgym/python/isaacgym/_bindings/linux-x86_64/usd/plugInfo.json\n",
+      "PyTorch version 2.0.1+cu117\n",
+      "Device count 1\n",
+      "/data/scratch/ankile/isaacgym/python/isaacgym/_bindings/src/gymtorch\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using /data/scratch/ankile/.cache as PyTorch extensions root...\n",
+      "Emitting ninja build file /data/scratch/ankile/.cache/gymtorch/build.ninja...\n",
+      "Building extension module gymtorch...\n",
+      "Allowing ninja to set a default number of workers... (overridable by setting the environment variable MAX_JOBS=N)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ninja: no work to do.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading extension module gymtorch...\n"
+     ]
+    }
+   ],
    "source": [
+    "from src.gym import get_env\n",
+    "\n",
     "import os\n",
     "import zarr\n",
     "import numpy as np\n",
@@ -18,7 +56,7 @@
     "\n",
     "from src.dataset import get_normalizer\n",
     "from src.dataset.normalizer import Normalizer\n",
-    "from src.common.geometry import np_rot_6d_to_rotvec, np_rotvec_to_rot_6d"
+    "from src.common.geometry import np_rot_6d_to_rotvec, np_rotvec_to_rot_6d\n"
    ]
   },
   {
@@ -404,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,9 +451,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['action', 'color_image1', 'color_image2', 'episode_ends', 'furniture', 'parts_poses', 'pickle_file', 'reward', 'robot_state', 'skill', 'success']\n"
+     ]
+    }
+   ],
    "source": [
     "teleop = zarr.open(\n",
     "    \"/data/scratch/ankile/furniture-data/processed/sim/one_leg/teleop/low/success.zarr\",\n",
@@ -425,7 +471,9 @@
     "scripted = zarr.open(\n",
     "    \"/data/scratch/ankile/furniture-data/processed/sim/one_leg/scripted/low/success.zarr\",\n",
     "    mode=\"r\",\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(list(teleop.keys()))"
    ]
   },
   {
@@ -435,14 +483,18 @@
    "outputs": [],
    "source": [
     "ep_ends = teleop[\"episode_ends\"][:]\n",
-    "xyz = teleop[\"action/pos\"][:, :3]\n",
+    "# xyz = normalize(teleop[\"action/pos\"][:], key=\"action\")[:, :3]\n",
+    "actions = teleop[\"action/pos\"][:]\n",
+    "xyz = actions[:, :3]\n",
     "\n",
+    "# Split into episodes\n",
+    "ep_actions = np.split(actions, ep_ends[:-1])\n",
     "ep_xyz = np.split(xyz, ep_ends[:-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -486,25 +538,174 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# Extracting x, y, z coordinates\n",
-    "x, y, z = ep_xyz[0][:, 0], ep_xyz[0][:, 1], ep_xyz[0][:, 2]\n",
     "\n",
-    "# Creating a 3D plot\n",
-    "fig = plt.figure(figsize=(16, 12))\n",
-    "ax = fig.add_subplot(111, projection=\"3d\")\n",
+    "def plot_3d_episode(ep_xyz: np.ndarray):\n",
+    "    # Extracting x, y, z coordinates\n",
+    "    x, y, z = ep_xyz[0][:, 0], ep_xyz[0][:, 1], ep_xyz[0][:, 2]\n",
     "\n",
-    "# Creating a color map based on the time progression\n",
-    "colors = plt.cm.jet(np.linspace(0, 1, len(x)))\n",
+    "    # Creating a 3D plot\n",
+    "    fig = plt.figure(figsize=(16, 12))\n",
+    "    ax = fig.add_subplot(111, projection=\"3d\")\n",
     "\n",
-    "# Plotting the line with color gradient\n",
-    "for i in range(len(x) - 1):\n",
-    "    ax.plot(x[i : i + 2], y[i : i + 2], z[i : i + 2], color=colors[i])\n",
+    "    # Creating a color map based on the time progression\n",
+    "    colors = plt.cm.jet(np.linspace(0, 1, len(x)))\n",
     "\n",
-    "# Optionally, plot the points as well to enhance the color visibility\n",
-    "ax.scatter(x, y, z, color=colors, s=10)  # 's' is the size of the points\n",
+    "    # Plotting the line with color gradient\n",
+    "    for i in range(len(x) - 1):\n",
+    "        ax.plot(x[i : i + 2], y[i : i + 2], z[i : i + 2], color=colors[i])\n",
     "\n",
-    "# Showing the plot\n",
-    "plt.show()"
+    "    # Optionally, plot the points as well to enhance the color visibility\n",
+    "    ax.scatter(x, y, z, color=colors, s=10)  # 's' is the size of the points\n",
+    "\n",
+    "    # Showing the plot\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "plot_3d_episode(ep_xyz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = get_env(\n",
+    "    act_rot_repr=\"rot_6d\",\n",
+    "    action_type=\"pos\",\n",
+    "    ctrl_mode=\"osc\",\n",
+    "    furniture=\"one_leg\",\n",
+    "    gpu_id=0,\n",
+    "    max_env_steps=1000,\n",
+    "    num_envs=1,\n",
+    "    randomness=\"low\",\n",
+    "    resize_img=False,\n",
+    "    verbose=False,\n",
+    "    headless=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Found collision-free init pose\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 8\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Set the environment state\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# env.reset_env_to(env_idx=0, state={\"robot_state\": teleop[\"robot_state\"][0], \"parts_poses\": teleop[\"parts_poses\"][0]})\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Play back the first episode of the teleop data\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m action \u001b[38;5;129;01min\u001b[39;00m ep_actions[\u001b[38;5;241m0\u001b[39m]:\n\u001b[0;32m----> 8\u001b[0m     \u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/gym/wrappers/order_enforcing.py:11\u001b[0m, in \u001b[0;36mOrderEnforcing.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mstep\u001b[39m(\u001b[38;5;28mself\u001b[39m, action):\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_has_reset, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot call env.step() before calling reset()\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 11\u001b[0m     observation, reward, done, info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m observation, reward, done, info\n",
+      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/torch/utils/_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(func)\n\u001b[1;32m    113\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecorate_context\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    114\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 115\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/data/scratch/ankile/furniture-bench/furniture_bench/envs/furniture_sim_env.py:826\u001b[0m, in \u001b[0;36mFurnitureSimEnv.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m    823\u001b[0m         step_ctrl\u001b[38;5;241m.\u001b[39mset_goal(action[env_idx][:\u001b[38;5;241m3\u001b[39m], action_quat\u001b[38;5;241m.\u001b[39mto(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdevice))\n\u001b[1;32m    825\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msim_steps):\n\u001b[0;32m--> 826\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrefresh\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    828\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mee_laser:\n\u001b[1;32m    829\u001b[0m         \u001b[38;5;66;03m# draw lines\u001b[39;00m\n\u001b[1;32m    830\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m3\u001b[39m):\n",
+      "File \u001b[0;32m/data/scratch/ankile/furniture-bench/furniture_bench/envs/furniture_sim_env.py:1061\u001b[0m, in \u001b[0;36mFurnitureSimEnv.refresh\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1060\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrefresh\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m-> 1061\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43misaac_gym\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msimulate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msim\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1062\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39misaac_gym\u001b[38;5;241m.\u001b[39mfetch_results(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msim, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m   1063\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39misaac_gym\u001b[38;5;241m.\u001b[39mstep_graphics(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msim)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "env.reset()\n",
+    "\n",
+    "# Set the environment state\n",
+    "# env.reset_env_to(env_idx=0, state={\"robot_state\": teleop[\"robot_state\"][0], \"parts_poses\": teleop[\"parts_poses\"][0]})\n",
+    "\n",
+    "# Play back the first episode of the teleop data\n",
+    "for action in ep_actions[0]:\n",
+    "    env.step(action)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wandb import Api\n",
+    "api = Api()\n",
+    "\n",
+    "from src.behavior import get_actor\n",
+    "from src.eval.rollout import rollout\n",
+    "from omegaconf import OmegaConf, DictConfig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total parameters: 150.01M\n",
+      "normalizer: 0.00M parameters\n",
+      "encoder1: 25.61M parameters\n",
+      "model: 124.40M parameters\n",
+      "loss_fn: 0.00M parameters\n",
+      "layernorm1: 0.00M parameters\n",
+      "layernorm2: 0.00M parameters\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load in a model and roll out a policy\n",
+    "run = api.run(\"robot-rearrangement/baselines/runs/bldvh98n\")\n",
+    "\n",
+    "# Load in the model\n",
+    "model_file = [f for f in run.files() if f.name.endswith(\".pt\")][0]\n",
+    "model_file.download(replace=False, exist_ok=True)\n",
+    "\n",
+    "cfg = OmegaConf.create(run.config)\n",
+    "\n",
+    "act = get_actor(\n",
+    "    config=cfg,\n",
+    "    device=\"cuda\",\n",
+    "    normalizer=normalize,\n",
+    ")\n",
+    "\n",
+    "act.load_state_dict(torch.load(model_file.name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Found collision-free init pose\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Roll out the policy\n",
+    "robot_states, imgs1, imgs2, actions, rewards, parts_poses = rollout(\n",
+    "    actor=act,\n",
+    "    env=env,\n",
+    "    rollout_max_steps=700,\n",
+    ")"
    ]
   },
   {
