--- a/notebooks/22_la_teleop_demos.ipynb
+++ b/notebooks/22_la_teleop_demos.ipynb
@@ -1985,6 +1985,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Produce examples of each of the tasks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.visualization.render_mp4 import mp4_from_pickle_jupyter, unpickle_data\n",
+    "from src.common.files import get_raw_paths\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lamp = \"/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/lamp/rollout/low/success/2024-02-10T16:04:24.pkl\"\n",
+    "rtable = \"/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/teleop/low/success/2024-02-09T19:05:14.pkl\"\n",
+    "stable = \"/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/square_table/teleop/low/success/2024-01-24T11:43:40.pkl\"\n",
+    "# chair = \"/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/chair/teleop/med/success/2024-02-10T12:32:45.pkl\"\n",
+    "\n",
+    "files = [\n",
+    "    lamp,\n",
+    "    rtable,\n",
+    "    # chair,\n",
+    "    stable,\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['observations', 'actions', 'rewards', 'success', 'furniture'])\n",
+      "File saved as 2024-02-10T16:04:24.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"2024-02-10T16:04:24.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['observations', 'actions', 'rewards', 'skills', 'success', 'furniture', 'error', 'error_description', 'augment_states'])\n",
+      "File saved as 2024-02-09T19:05:14.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"2024-02-09T19:05:14.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['observations', 'actions', 'rewards', 'skills', 'success', 'furniture', 'error', 'error_description'])\n",
+      "File saved as 2024-01-24T11:43:40.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"2024-01-24T11:43:40.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Make videos of all the files\n",
+    "for f in files:\n",
+    "    f = Path(f)\n",
+    "    print(unpickle_data(f).keys())\n",
+    "    mp4_from_pickle_jupyter(f, f\"{f.stem}.mp4\", fps=20)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
