Tweaks and fixes, collectinfer sweep

--- a/notebooks/22_la_teleop_demos.ipynb
+++ b/notebooks/22_la_teleop_demos.ipynb
@@ -2096,6 +2096,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Square table demos "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import furniture_bench\n",
+    "\n",
+    "import os\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "import zarr\n",
+    "\n",
+    "from src.visualization.render_mp4 import (\n",
+    "    data_to_video,\n",
+    "    unpickle_data,\n",
+    "    create_mp4_jupyter,\n",
+    "    mp4_from_pickle_jupyter,\n",
+    ")\n",
+    "from src.gym import get_env\n",
+    "from src.common.files import get_raw_paths\n",
+    "\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found the following paths:\n",
+      "    /data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/square_table/teleop/low/success/*.pkl*\n"
+     ]
+    }
+   ],
+   "source": [
+    "pickles = get_raw_paths(\n",
+    "    task=\"square_table\",\n",
+    "    randomness=\"low\",\n",
+    "    demo_source=\"teleop\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as 2024-02-19T09:00:14.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"2024-02-19T09:00:14.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as 2024-02-19T08:55:23.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"2024-02-19T08:55:23.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for p in pickles:\n",
+    "    mp4_from_pickle_jupyter(p, f\"{p.stem}.mp4\", fps=20)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
