Allow the environment to rest before starting the rollout

--- a/notebooks/30_la_rollout_augment.ipynb
+++ b/notebooks/30_la_rollout_augment.ipynb
@@ -10282,7 +10282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -10291,7 +10291,8 @@
      "text": [
       "Found the following paths:\n",
       "    /data/scratch/ankile/furniture-data/processed/sim/round_table/teleop/low/success.zarr\n",
-      "    /data/scratch/ankile/furniture-data/processed/sim/lamp/teleop/low/success.zarr\n"
+      "    /data/scratch/ankile/furniture-data/processed/sim/lamp/teleop/low/success.zarr\n",
+      "    /data/scratch/ankile/furniture-data/processed/sim/square_table/teleop/low/success.zarr\n"
      ]
     }
    ],
@@ -10410,6 +10411,102 @@
    ],
    "source": [
     "zl.color_image1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found the following paths:\n",
+      "    /data/scratch/ankile/furniture-data/processed/sim/round_table/teleop/low/success.zarr\n",
+      "    /data/scratch/ankile/furniture-data/processed/sim/round_table/rollout/low/success.zarr\n"
+     ]
+    }
+   ],
+   "source": [
+    "paths = get_processed_paths(\n",
+    "    environment=\"sim\",\n",
+    "    demo_source=[\"teleop\", \"rollout\"],\n",
+    "    demo_outcome=\"success\",\n",
+    "    task=[\"round_table\"],\n",
+    "    randomness=\"low\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zt = zarr.open(paths[1], \"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50,)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zt.episode_ends.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found the following paths:\n",
+      "    /data/scratch/ankile/furniture-data/processed/sim/lamp/teleop/low/success.zarr\n",
+      "    /data/scratch/ankile/furniture-data/processed/sim/lamp/augmentation/low/success.zarr\n",
+      "    /data/scratch/ankile/furniture-data/processed/sim/square_table/teleop/low/success.zarr\n",
+      "    /data/scratch/ankile/furniture-data/processed/sim/square_table/augmentation/low/success.zarr\n",
+      "    /data/scratch/ankile/furniture-data/processed/sim/round_table/teleop/low/success.zarr\n",
+      "    /data/scratch/ankile/furniture-data/processed/sim/round_table/augmentation/low/success.zarr\n",
+      "    /data/scratch/ankile/furniture-data/processed/sim/round_table/rollout/low/success.zarr\n",
+      "<zarr.core.Array '/furniture' (50,) object>: 50 episodes, 43267 timesteps, created 2024-02-19T07:57:40.690992-05:00\n",
+      "<zarr.core.Array '/furniture' (542,) object>: 542 episodes, 28012 timesteps, created 2024-02-20T14:50:49.042872-05:00\n",
+      "<zarr.core.Array '/furniture' (50,) object>: 50 episodes, 130301 timesteps, created 2024-02-20T10:56:28.230334-05:00\n",
+      "<zarr.core.Array '/furniture' (723,) object>: 723 episodes, 41597 timesteps, created 2024-02-21T08:22:57.865719-05:00\n",
+      "<zarr.core.Array '/furniture' (50,) object>: 50 episodes, 47246 timesteps, created 2024-02-18T09:22:31.934689-05:00\n",
+      "<zarr.core.Array '/furniture' (500,) object>: 500 episodes, 28105 timesteps, created 2024-02-18T08:22:11.981479-05:00\n",
+      "<zarr.core.Array '/furniture' (50,) object>: 50 episodes, 55319 timesteps, created 2024-02-20T22:29:56.658068-05:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "paths = get_processed_paths(\n",
+    "    environment=\"sim\",\n",
+    "    demo_source=[\"teleop\", \"augmentation\", \"rollout\"],\n",
+    "    demo_outcome=\"success\",\n",
+    "    task=[\"lamp\", \"square_table\", \"round_table\"],\n",
+    "    randomness=\"low\",\n",
+    ")\n",
+    "for p in paths:\n",
+    "    z = zarr.open(p)\n",
+    "    print(\n",
+    "        f\"{z.furniture}: {z.episode_ends.shape[0]} episodes, {z.episode_ends[-1]} timesteps, created {z.attrs['time_created']}\"\n",
+    "    )"
    ]
   },
   {
