Implement partial success for curriculum

--- a/notebooks/30_la_rollout_augment.ipynb
+++ b/notebooks/30_la_rollout_augment.ipynb
@@ -37,6 +37,8 @@
                 "import random\n",
                 "from tqdm import tqdm\n",
                 "\n",
+                "import numpy as np\n",
+                "\n",
                 "base_dir = Path(\"tmp\")"
             ]
         },
@@ -50,7 +52,7 @@
                 "    environment=\"sim\",\n",
                 "    demo_source=\"rollout\",\n",
                 "    demo_outcome=\"success\",\n",
-                "    task=\"square_table\",\n",
+                "    task=\"round_table\",\n",
                 "    randomness=\"low\",\n",
                 ")\n",
                 "\n",
@@ -66,7 +68,9 @@
             "outputs": [],
             "source": [
                 "for path in paths[:1]:\n",
-                "    mp4_from_pickle_jupyter(path, filename=(base_dir / path.stem).with_suffix(\".mp4\"), fps=20)"
+                "    mp4_from_pickle_jupyter(\n",
+                "        path, filename=(base_dir / path.stem).with_suffix(\".mp4\"), fps=20\n",
+                "    )"
             ]
         },
         {
@@ -74,6 +78,92 @@
             "metadata": {},
             "source": [
                 "### Look at state-space coverage"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### Learn from partial successes as a curriculum"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "paths = get_raw_paths(\n",
+                "    environment=\"sim\",\n",
+                "    demo_source=\"rollout\",\n",
+                "    demo_outcome=\"failure\",\n",
+                "    task=\"round_table\",\n",
+                "    randomness=\"med\",\n",
+                ")\n",
+                "\n",
+                "# random.shuffle(paths)\n",
+                "paths = sorted(paths)\n",
+                "\n",
+                "data_keys = [\"observations\", \"actions\", \"rewards\"]\n",
+                "meta_keys = [\"success\", \"furniture\", \"action_type\"]\n",
+                "\n",
+                "len(paths), paths[:3]"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "new_path = Path(str(paths[0]).replace(\"failure\", \"partial_success\"))\n",
+                "\n",
+                "new_path.parent.mkdir(parents=True, exist_ok=True)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Iterate over the paths and render and find the ones where ther is at least one reward\n",
+                "truncation_tail = 64\n",
+                "n_partial = 0\n",
+                "\n",
+                "n = 0\n",
+                "\n",
+                "it = tqdm(paths[n * 114 : (n + 1) * 114], postfix={\"partial_success\": n_partial})\n",
+                "for path in it:\n",
+                "    data = unpickle_data(path)\n",
+                "\n",
+                "    if sum(data[\"rewards\"]) < 1:\n",
+                "        continue\n",
+                "\n",
+                "    # Find the index of the last reward\n",
+                "    rew = np.array(data[\"rewards\"])\n",
+                "    last_reward = np.where(rew > 0)[0][-1]\n",
+                "\n",
+                "    # Make a copy of the data and truncate the `data_keys`\n",
+                "    truncated_data = {}\n",
+                "    truncated_data[\"observations\"] = data[\"observations\"][\n",
+                "        : last_reward + truncation_tail + 1\n",
+                "    ]\n",
+                "    truncated_data[\"actions\"] = data[\"actions\"][: last_reward + truncation_tail]\n",
+                "    truncated_data[\"rewards\"] = data[\"rewards\"][: last_reward + truncation_tail]\n",
+                "\n",
+                "    # Add the `meta_keys`\n",
+                "    truncated_data.update({k: data[k] for k in meta_keys})\n",
+                "    truncated_data[\"success\"] = \"partial_success\"\n",
+                "    truncated_data[\"truncated\"] = True\n",
+                "    truncated_data[\"truncation_tail\"] = truncation_tail\n",
+                "\n",
+                "    new_path = Path(str(path).replace(\"failure\", \"partial_success\"))\n",
+                "    new_path.parent.mkdir(parents=True, exist_ok=True)\n",
+                "\n",
+                "    pickle_data(truncated_data, new_path)\n",
+                "    n_partial += 1\n",
+                "    it.set_postfix({\"partial_success\": n_partial})"
             ]
         },
         {
@@ -137,7 +227,9 @@
             "outputs": [],
             "source": [
                 "for i, path in enumerate(paths[:10], start=1):\n",
-                "    mp4_from_pickle_jupyter(path, filename=(base_dir / path.stem).with_suffix(\".mp4\"), fps=20)"
+                "    mp4_from_pickle_jupyter(\n",
+                "        path, filename=(base_dir / path.stem).with_suffix(\".mp4\"), fps=20\n",
+                "    )"
             ]
         },
         {
@@ -194,7 +286,9 @@
             "outputs": [],
             "source": [
                 "for i, path in enumerate(paths[:1], start=1):\n",
-                "    mp4_from_pickle_jupyter(path, filename=(base_dir / path.stem).with_suffix(\".mp4\"), fps=20)"
+                "    mp4_from_pickle_jupyter(\n",
+                "        path, filename=(base_dir / path.stem).with_suffix(\".mp4\"), fps=20\n",
+                "    )"
             ]
         },
         {
