Add more metadata to the dataset in runs

--- a/notebooks/30_la_rollout_augment.ipynb
+++ b/notebooks/30_la_rollout_augment.ipynb
@@ -453,6 +453,55 @@
                 "\n",
                 "plt.show()"
             ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Look at MLP rollouts"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from pathlib import Path\n",
+                "from src.visualization.render_mp4 import (\n",
+                "    mp4_from_pickle_jupyter,\n",
+                "    unpickle_data,\n",
+                "    pickle_data,\n",
+                ")\n",
+                "from src.common.files import get_raw_paths\n",
+                "import random\n",
+                "from tqdm import tqdm\n",
+                "\n",
+                "base_dir = Path(\"tmp\")\n",
+                "pickles = list((base_dir / \"mlp_rollouts\").rglob(\"*.pkl\"))\n",
+                "\n",
+                "pickles"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "for i, path in enumerate(pickles, start=1):\n",
+                "    print(f\"Rendering {i}/{len(pickles)}: {path}\")\n",
+                "    mp4_from_pickle_jupyter(\n",
+                "        path, filename=(base_dir / path.stem).with_suffix(\".mp4\"), fps=20\n",
+                "    )"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": []
         }
     ],
     "metadata": {
